<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="dev.dishant.exekutivefades.newUserActivity"
    android:background="@drawable/bg_image">

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/back"
        android:ems="10"
        android:hint="@string/select_user_name"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:layout_marginTop="80dp"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/back"
        android:ems="10"
        android:hint="@string/enter_email"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:layout_below="@+id/editTextUsername"
        android:layout_alignLeft="@+id/editTextUsername"
        android:layout_alignStart="@+id/editTextUsername"/>

    <EditText
        android:id="@+id/editTextConfirmEmail"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/back"
        android:ems="10"
        android:hint="@string/confirm_email"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:layout_below="@+id/editTextEmail"
        android:layout_alignLeft="@+id/editTextUsername"
        android:layout_alignStart="@+id/editTextUsername"/>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/enter_password"
        tools:layout_editor_absoluteX="54dp"
        tools:layout_editor_absoluteY="155dp"
        android:paddingLeft="10dp"
        android:background="@drawable/back"
        android:layout_below="@+id/editTextConfirmEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:text="@string/btn_signup"
        tools:layout_editor_absoluteX="53dp"
        tools:layout_editor_absoluteY="243dp"
        android:layout_below="@+id/editTextPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="#e65c00"
        android:onClick="signupFunction"/>

</RelativeLayout>
